# gse

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
.github/workflows/: cmake.yml
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
include/: data_buffer.cpp  data_buffer.h  data_buffer_interface.h  gs_api.h  gs_decoder.h  gs_deserializer.h  gs_encoder.h  gs_serializer.h  gs_types.h  octet_string.h
src/: CMakeLists.txt  data_buffer.cpp  data_buffer_interface.cpp  gs_api.cpp  gs_api_internal.cpp  gs_api_internal.h  gs_decoder.cpp  gs_deserializer.cpp  gs_encoder.cpp  gs_serializer.cpp  half_float.cpp  octet_string.cpp
src/common/: CMakeLists.txt
src/common/include/: data_buffer.cpp  data_buffer.h  data_buffer_interface.h  octet_string.h
src/common/src/: CMakeLists.txt  data_buffer_interface.cpp  octet_string.cpp
src/gse/: CMakeLists.txt
src/gse-sharp/: gse-sharp.sln
src/gse-sharp/src/: Decoder.cs  Encoder.cs  NativeObjects.cs  NativeTypes.cs  gse-sharp.csproj
src/gse-sharp/test/: DecoderTests.cs  EncoderTests.cs  test.csproj
src/gse/include/: data_buffer.cpp  data_buffer.h  data_buffer_interface.h  gs_api.h  gs_decoder.h  gs_deserializer.h  gs_encoder.h  gs_serializer.h  gs_types.h
src/gse/src/: CMakeLists.txt  data_buffer_interface.cpp  gs_api.cpp  gs_api_internal.cpp  gs_api_internal.h  gs_decoder.cpp  gs_deserializer.cpp  gs_encoder.cpp  gs_serializer.cpp  half_float.cpp  half_float.h
test/: CMakeLists.txt
test/test_databuffer/: CMakeLists.txt  test_databuffer.cpp
test/test_float/: CMakeLists.txt  test_float.cpp
test/test_gs_api/: CMakeLists.txt  test_gs_api.cpp
test/test_gs_decoder/: CMakeLists.txt  test_gs_decoder.cpp
test/test_gs_deserializer/: CMakeLists.txt  test_gs_deserializer.cpp  test_main.cpp
test/test_gs_encoder/: CMakeLists.txt  test_gs_encoder.cpp
test/test_gs_serializer/: CMakeLists.txt  test_gs_serializer.cpp
test/test_gs_types/: CMakeLists.txt  test_gs_types.cpp
test/test_half_float/: CMakeLists.txt  test_half_float.cpp
